--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -158,37 +158,33 @@ There is a search field entitled "Search active Government of Canada opportuniti
 			<th scope="col">Baseline</th>
 			<th scope="col">Validation</th>
 
-		</tr></thead><tbody><tr><td>Idonesia + codeine</td>
-			<td>17%</td>
-			<td>53%</td>
-		</tr><tr><td>Malawi + advice</td>
-			<td>21%</td>
-			<td>84%</td>
-		</tr><tr><td>Spain + lost passport</td>
-			<td>37%</td>
-			<td>53%</td>
-		</tr><tr><td>Cuba + health insurance</td>
-			<td>16%</td>
-			<td>63%</td>
-			<tr><td>Cayman Islands + hurricanes</td>
-				<td>32%</td>
-				<td>78%</td>
-			</tr>
-		</tr><tr><td>Travel checklist</td>
+		</tr></thead><tbody><tr><td>Tender search (landscaping)</td>
 			<td>11%</td>
-			<td>100%</td>
-		</tr>
-		<tr><td>London appointment</td>
-			<td>12%</td>
 			<td>58%</td>
-		</tr>
-		<tr><td>Costa Rica + yellow fever</td>
+		</tr><tr><td>Join the list of interested suppliers</td>
+			<td>39%</td>
+			<td>79%</td>
+		</tr><tr><td>Statement of work</td>
+			<td>6%</td>
+			<td>79%</td>
+		</tr><tr><td>Tender search (proofreading)</td>
 			<td>41%</td>
-			<td>71%</td>
+			<td>89%</td>
+			<tr><td>Remote work</td>
+				<td>0%</td>
+				<td>95%</td>
+			</tr>
+		</tr><tr><td>Dates + standing offer</td>
+			<td>11%</td>
+			<td>53%</td>
 		</tr>
-		<tr><td>Cambodia + advisory</td>
-			<td>21%</td>
-			<td>37%</td>
+		<tr><td>GSIN look-up</td>
+			<td>29%</td>
+			<td>47%</td>
+		</tr>
+		<tr><td>Supply arrangement</td>
+			<td>22%</td>
+			<td>47%</td>
 		</tr>
 
 		</tbody>
