--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -144,7 +144,7 @@ There is a search field entitled "Search active Government of Canada opportuniti
 
 <p>This chart shows a comparison of task success rates between the baseline and validation tests for all 37 participants.</p>
 
-<img class="img-responsive hidden-sm hidden-xs" alt="Include table that supports this graph" src="../images/EPS-Graph.PNG"/>
+<img class="img-responsive hidden-sm hidden-xs" alt="Comparing task completion success rates in baseline and validation testing." src="../images/EPS-Graph.PNG"/>
 	
 <div class="row col-md-9">
 <details>
