--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -78,10 +78,38 @@ h2 {
   
   <p>Le rôle de ce nouveau site (AchatsCanada) sera d’appuyer des tâches comme d’apprendre sur l’approvisionnement du gouvernement, de découvrir comment devenir un fournisseur du gouvernement et de rechercher des occasions ouvertes à des appels d’offres concurrentiels (aussi appelés appels d’offres).</p>
 
-<h2>Ce qui a singularisé ce projet</h2>
+	<p>Entre avril et juillet 2019, le Bureau de la transformation numérique (BTN) du Conseil du Trésor s’est associé à l’équipe des SPAC responsable de la conception du nouveau site AchatsCanada.</p>
 
-<h3>Banc d’essai de recherche</h3>
-<p>Afin de nous aider à expérimenter des fonctions et des options, nous avons créé un banc d’essai de recherche. Nous avons obtenu les données pour l’index du banc d’essai à l’aide d’une combinaison d’extraction de base de données (du système de gestion des rappels et des avis de sécurité) et de jeux de données ouvertes pour les rappels de véhicules, publiés par Transports Canada sur <a href="https://ouvert.canada.ca/fr">ouvert.canada.ca</a>. Le banc d’essai a permis à l’équipe de projet de mettre à l’essai différentes options pour configurer la solution et l’interface de recherche. Parmi les fonctions mises à l’essai, il y avait des facettes et des filtres, des mécanismes d’affinement et de rétroaction, la suggestion automatique (saisie prédictive), la correction de requête, la mise en surbrillance et plus encore. L’application de ces fonctions à des données réelles a été extrêmement utile.</p>
+<p>Nous avons mis l’accent sur les besoins des entreprises nouvellement arrivées dans le domaine des marchés publics. Nous avons fait des tests auprès de petites et moyennes entreprises pas encore inscrites comme fournisseurs du gouvernement du Canada.</p>
+
+<h2>Établir une référence</h2>
+
+<p>Nous avons effectué notre test de référence sur le rendement des tâches sur le site Achats et ventes existant.</p>
+
+<p>Dans cette étude de référence, 18 petites et moyennes entreprises ont effectué 158 tests. Les problèmes les plus fréquemment rencontrés par les participants étaient les suivants : </p>
+	<ul>
+		<li>complexité : le site contient beaucoup d’information, des pages surchargées difficiles à parcourir, de la terminologie technique et du jargon</li>
+		<li>excès de liens : trop de liens éloignent les gens de la tâche qu’ils sont venus accomplir</li>
+		<li>mauvaise convivialité de recherche : les options de la page d’accueil sont en fait des recherches prédéfinies pouvant comprendre un grand nombre d’occasions et d’avis d’attribution expirés</li>
+		<li>les résumés des appels d’offres compliquent la distinction entre l’information pertinente et les renseignements moins importants</li>
+		<li>l’information cruciale enfouie dans les PDF présente un obstacle important</li>
+		<li>les liens PDF portaient des noms de fichier qui ne signifiaient rien pour les utilisateurs, de sorte que souvent, il n’était pas évident qu’il fallait les ouvrir pour trouver l’information pertinente.</li>
+	</ul>
+
+	<h2>Conception pour la réussite</h2>
+<p>Le prototype d’AchatsCanada a été développé dans Drupal. C’était la première fois que l’équipe du BTN utilisait Drupal au lieu de Github pour le prototypage. L’avantage de Drupal est son interface WYSIWIG (What You See Is What You Get [ce que vous voyez est ce que vous obtenez]). Il permet à un plus grand nombre de personnes qui ne sont pas des programmeurs de contribuer à la conception et à l’itération du contenu.</p>
+
+<p>Nous avons élaboré la conception du prototype grâce à une série d’ateliers de collaboration intensifs avec des experts en approvisionnement des SPAC. Ainsi, nous avons pu développer un prototype avec plusieurs innovations, notamment :</p>
+
+<h4>Interface de recherche rationalisée et affichage de l’appel d’offres</h4>
+<p>L’expérience de recherche prototypique utilisait une seule boîte de recherche sur la page d’accueil.</p>
+
+	<p>(insert image)</p>
+	
+<p>Elle présentait ensuite un ensemble simplifié  d’options à facettes pour réduire les résultats.</p>
+	
+	<p>(insert image)</p>
+	
 
 <h3>Tests d’optimisation et tests de produits</h3>
 <p>Au moment de commencer le projet, nous avions prévu effectuer une série de test. Nous voulions réutiliser les tâches et les données de référence du premier projet, et comparer l’exécution des tâches pour compléter l’étude. Nos études d’optimisation exigent au moins 16 exécutions par tâche pour que la comparaison soit fiable.</p>
