--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -110,94 +110,51 @@ h2 {
 	
 	<p>(insert image)</p>
 	
-
-<h3>Tests d’optimisation et tests de produits</h3>
-<p>Au moment de commencer le projet, nous avions prévu effectuer une série de test. Nous voulions réutiliser les tâches et les données de référence du premier projet, et comparer l’exécution des tâches pour compléter l’étude. Nos études d’optimisation exigent au moins 16 exécutions par tâche pour que la comparaison soit fiable.</p>
-
-<p>La mise en œuvre d’une solution de recherche complète dans un délai limité est un projet complexe. Nous nous sommes retrouvés à mettre en œuvre de nouvelles fonctions, à mettre à jour l’index et à apporter des changements considérables au produit en cours d’essai. C’était fantastique d’apprendre et de faire des expériences, et c’est exactement ce qu’il faut faire pour développer un produit. L’inconvénient était que nous n’avions pas notre seuil minimal de 16 exécutions de tâche, donc nous ne pouvions pas utiliser les données de test à des fins de comparaison.</p>
-
-<h2>Définition de la recherche spécialisée</h2>
-<p>La recherche spécialisée diffère de la recherche Web. Elle se concentre sur les requêtes d’une base de données structurée particulière, ou sur un ensemble de contenu connexe, qui peut comprendre des sources de contenu structurées et non structurées.</p>
-
-<p>Contrairement à la recherche Web, toutes les composantes du système de recherche devraient être sous le contrôle, ou du moins l’influence, du chef de produit. Pour aider les organisations à offrir et à maintenir une expérience utilisateur efficace, nous voulions définir ces diverses composantes ainsi que les compétences et les activités nécessaires pour les soutenir.</p>
-	
-<h2>Composantes de la recherche spécialisée</h2>
-
-<p>Une solution de recherche complète comprend de nombreuses composantes et chacune de ces composantes doit faire l’objet de décisions de conception.</p>
-	
-	<ul>
-		<li>Magasins de contenu
-		<ul> 
-		<li>Sources de contenu structurées à indexer et sources de contenu non structurées à parcourir et à indexer;</li>
-			<li>Structure du contenu et des données, changements et améliorations, comme l’ajout de résumés pour faciliter l’analyse et la compréhension ainsi que la création de champs pour soutenir les facettes et les filtres.</li>
-			</ul></li>
-		<li>Traitement et indexation du contenu
-			<ul>
-				<li>Détermination de ce qui doit être inclus ou exclu de l’index de recherche;</li>
-				<li>Fonctions telles que la segmentation en unités lexicales, la lemmatisation, la racinisation et les mots vides qui peuvent être configurées dans la solution de recherche.</li>
-			</ul></li>
-		<li>Traitement des requêtes et fonctions de recherche
-		<ul>
-			<li>Limite des résultats par date ou autres critères;</li>
-			<li>Classification, recherche à facettes, suggestion automatique, correction d’erreur (« Vouliez-vous dire? »), etc.</li>
-			</ul></li>
-		<li>Conception de l’interface de recherche et présentation des résultats
-		<ul>
-			<li>Fragments, ordre de tri, options d’affinement, récupération de recherche sans résultat, etc.;</li>
-			</ul></li>
-		<li>Analyse de recherche et mesure du rendement</li>
-	</ul>
-
-<h2>Favoriser la recherche efficace</h2>
-
-<p>À la fin du projet, nous avons offert à Santé Canada des recommandations pour la mise en œuvre du nouveau système de gestion des rappels et des avis de sécurité.</p>
-
-<p>L’expérience que nous avons acquise au cours de ce projet nous a permis de mieux comprendre la complexité des fonctions de recherche spécialisée efficaces. Les principales recommandations, résumées dans le présent document, s’appliquent à toute mise en œuvre de fonctions de recherche spécialisée.</p>
-
-	<h4>Comprendre les cas d’utilisation de recherche</h4>
-	
-<p>Il est important d’examiner les données probantes sur la façon dont les gens utilisent la recherche spécialisée, puis de concevoir la solution qui convient à ces comportements.</p>
-
-<p>Par exemple, des recherches antérieures ont montré que le comportement de recherche dans le système de gestion des rappels et des avis de sécurité est orienté par des habitudes distinctes :
-
+	<p>Les options étaient centrées sur les considérations pouvant aider les fournisseurs à éliminer rapidement les options non pertinentes.</p>
 <ul>
-		<li>recherche par produit (marque) ou catégorie de produit (jouets, voitures);</li>
-		<li>recherche par préoccupation pour la santé (allergies particulières);</li>
-		<li>recherche par problème (rappels liés à la listériose d’origine alimentaire ou à la bactérie E. coli).</li>
-</ul>
-	
-<p>Une compréhension commune de ces habitudes peut vous aider à déterminer la façon de structurer votre contenu. Par exemple, les données du système de gestion des rappels et des avis de sécurité ne possèdent pas les noms de marque ou les codes de produits comme champ distinct. Cela a miné la précision des résultats de recherche.</p>
-
-	<h4>Corriger les données à la source, avec l’aide des bonnes personnes</h4>
-
-	<p>En ce qui concerne le système de gestion des rappels et des avis de sécurité, le fait que le contenu provient de nombreuses équipes et organisations pose un défi important. Chacune possède ses propres processus, modèles et formats pour publier les rappels et autres avis liés aux produits particuliers dont elle assure la surveillance.</p>
-
-<p>Pour ce projet, nous avions un jeu de données statiques. Par conséquent, nous pouvions faire des ajouts et des suppressions manuels pour préparer une seule source de données de recherche précise pour l’indexation. Voici quelques-uns des changements apportés aux données : </p>
-	
-	<ul>
-		<li>séparer les avis visant plus d’un produit de manière à avoir un seul produit par avis;</li>
-		<li>réviser le format des titres de rappel;</li>
-		<li>apporter des améliorations à la taxonomie du système et appliquer les valeurs mises à jour;</li>
-		<li>exclure les enregistrements périmés et redondants de l’index.</li>
+	<li>De quel genre d’opportunité s’agit-il? Une demande de propositions (DP) ou une invitation à se qualifier pour une offre à commandes ou un arrangement d’approvisionnement permanent?</li>
+	<li>Suis-je qualifié à répondre?</li>
+<li>Cela correspond-il à ce que je vends ou à ce que je fournis?</li>
+<li>Quand et où le travail doit-il être effectué?</li>
+<li>Quelle est la date limite de réponse?</li>
 	</ul>
 	
-<p>Ce « post-traitement » des données de recherche avant l’indexation a exigé beaucoup de travail. Des incohérences et des problèmes de qualité des données nous ont également compliqué la tâche.</p>
-
-<p>Idéalement, ce genre de problèmes devrait être réglé à la source, plutôt que corrigé par la suite. Pour y parvenir, il faut réunir les personnes qui connaissent le mieux les données ou le contenu.</p>
-
-	<h4>Affecter des ressources à la surveillance du rendement et à la conservation des données</h4>
+	<h4>Affichage lisible du résumé de l’opportunité</h4>
 	
-<p>Votre recherche est-elle efficace? Pour répondre à cette question, vous devez définir des paramètres de rendement de recherche et effectuer des analyses régulières.</p>
+	<p>Dans le prototype, les soumissions étaient formatées de façon à fournir l’information essentielle dans un format unique et facile à lire. Le modèle « sur cette page » a été utilisé pour faciliter la navigation. Encore une fois, le plus important était de faciliter la manière dont les fournisseurs pouvaient déterminer :</p>
+	<ul>
+		<li>les produits recherchés par les acheteurs</li>
+		<li>les critères d’évaluation</li>
+		<li>la manière de trouver des partenaires potentiels</li>
+	</ul>
 	
-<p>Vous devez surveiller continuellement ces mesures. Elles doivent engendrer des améliorations de la composante pertinente dans la solution de recherche.</p>
+	<h4>Modèle de document détaillé pour les DP et les énoncés des travaux</h4>
+<p>Actuellement, la plupart des DP sont seulement publiées en format PDF. Les entreprises doivent télécharger le PDF avant de pouvoir l’analyser ou faire une recherche dans le document. Le prototype a essayé d’utiliser un format HTML navigable pour les documents longs. Il contenait une table des matières interactive permettant aux gens d’accéder facilement à des sections clés comme l’énoncé de travail.</p>
+	
+	<h4>Hiérarchie navigable pour les codes de produits et de services</h4>
+<p>Le prototype utilisait une simple recherche par mot clé pour aider les entreprises à trouver le code UNSPSC ou NIBS pour un produit ou un service en particulier. Les résultats affichaient la hiérarchie complète du contexte et permettaient aux utilisateurs de naviguer dans l’arborescence.</p>
+	
+	<p>(insert image)</p>
+	
+<h4>Un assistant aidant les fournisseurs à identifier leur meilleure « méthode d’approvisionnement »</h4>
+<p>Savoir s’il existe un arrangement en matière d’approvisionnement permettant à votre entreprise de se préqualifier pour les occasions gouvernementales est l’un des aspects les plus complexes de l’apprentissage du fonctionnement de l’approvisionnement. L’assistant prototypé a simplifié cette tâche. Il posait des questions simples et présentait les meilleurs choix pour votre produit ou votre service.</p>
+	
+	<p>(insert image)</p>
 
-<p>Si votre solution de recherche regroupe des données et du contenu provenant de multiples sources, la conservation des données est essentielle. L’infrastructure de publication (système de gestion du contenu) devrait assurer la cohérence structurelle et imposer des contraintes (comme l’utilisation de vocabulaire contrôlé pour l’étiquetage du contenu). La qualité du contenu doit être surveillée. Cette surveillance devrait, à son tour, éclairer l’amélioration de la structure, de l’orientation et des biens partagés (comme le vocabulaire contrôlé).</p>
+<h2>Mesure des taux de réussite du nouveau prototype AchatsCanada</h2>
+	
+	<p>Ce graphique présente une comparaison des taux de réussite des tâches entre les tests de référence et les tests de validation pour l’ensemble des 37 participants.</p>
+	<p>(insert image and chart)</p>
 
-<h2>La recherche n’est jamais terminée</h2>
+<h2>Principaux facteurs de réussite</h2>
 
-<p>Une solution de recherche efficace nécessite des ressources dédiées. Sa conception et son entretien nécessitent des compétences multiples. Il faut notamment faire appel à des experts en la matière, des architectes de l’information, des concepteurs de contenu, des développeurs, des spécialistes des données et des réseaux, des analystes de recherche et des chercheurs sur les utilisateurs.</p>
-
-<p>Pour citer notre expert en recherche : « La recherche est difficile, mais une bonne recherche est encore plus difficile. »</p>
+<p>Voici les caractéristiques du prototype qui ont eu la plus grande incidence sur les taux de réussite :</p>
+<ul>
+	<li>moins de mots, étiquettes claires, langage simple</li>
+	<li>expérience de recherche rationalisée avec des choix moins nombreux et plus clairs pour réduire les résultats</li>
+	<li>information simplifiée et lisible sur l’avis d’appels d’offres répondant aux questions clés pour déterminer la pertinence et l’admissibilité</li>
+	<li>aucun PDF</li>
+	</ul>
 
 <div class="clearfix"></div>
 <h2>Demander les résultats de recherche</h2>
@@ -211,7 +168,6 @@ h2 {
 <h2>Pour en savoir plus</h2>
 
 <ul>
-	<li><a href="http://blogue.canada.ca/resumes-recherche/rappels-resume-recherche.html">Résumé de projet : Rappels et avis de sécurité </a> (première série)</li>
 	<li>Consultez les aperçus de nos autres <a href="https://blogue.canada.ca/pages/apercu-projet.html#projets">projets avec nos partenaires</a></li>
 </ul>
 
