--- a/draft-research/recalls-safety-alerts-research-summary.html
+++ b/draft-research/recalls-safety-alerts-research-summary.html
@@ -166,7 +166,7 @@ main p, main li, main blockquote {
 
 <p>An effective search solution requires dedicated resources. It needs to involve multiple skill sets in its design and maintenance. This should include subject matter experts, information architects, content designers, developers, data and network specialists, search analysts, and user researchers.</p>
 
-	<p>To quote our search expert: “Search is hard. Good search is harder.” </p>
+	<p>To quote our search expert: <blockquote>“Search is hard. Good search is harder.”</blockquote> </p>
 
 <div class="clearfix"></div>
 <h2>Request the research</h2>
