--- a/draft-research/rappels-securite-resume-recherche.html
+++ b/draft-research/rappels-securite-resume-recherche.html
@@ -72,7 +72,7 @@ h2 {
 
 	<p>Dans le cadre du premier projet, nous avions créé un prototype de recherche à l’aide du moteur de recherche de Canada.ca. Les résultats de ce projet ont validé bon nombre des hypothèses qui avaient orienté la conception du prototype, mais les fonctions de recherche étaient limitées. Par conséquent, le prototype ne pouvait pas être déployé dans l’environnement du système de gestion des rappels et des avis de sécurité qui était en place à l’époque.</p>
 	
-	<p>Pour ce second projet, l’équipe a pu expérimenter une solution de recherche à source ouverte. Nous avons également ajouté un expert en recherche à l’équipe du projet. L’objectif était d’aider Santé Canada à se préparer à la mise en œuvre de fonctions de recherche dans une nouvelle infrastructure de publication fondée sur Drupal pour le système de gestion des rappels et des avis de sécurité, qui seront lancées au cours de l’exercice 2020-2021.</p>
+	<p>Pour ce second projet, l’équipe a pu expérimenter une solution de recherche à source ouverte. Nous avons également ajouté un expert en recherche à l’équipe du projet. L’objectif était d’aider Santé Canada à se préparer à la mise en œuvre de fonctions de recherche dans une nouvelle infrastructure de publication fondée sur Drupal pour le système de gestion des rappels et des avis de sécurité, qui seront lancées au cours de l’exercice 2020 à 2021.</p>
 	
 	<p>Au BTN, notre objectif était d’en apprendre davantage sur l’offre de fonctions de recherche spécialisée efficaces, afin que nous puissions fournir des conseils et une orientation à d’autres organisations du GC qui offrent des fonctions de recherche semblables à leurs utilisateurs.</p>
 
@@ -167,7 +167,7 @@ h2 {
 
 <p>Une solution de recherche efficace nécessite des ressources dédiées. Sa conception et son entretien nécessitent des compétences multiples. Il faut notamment faire appel à des experts en la matière, des architectes de l’information, des concepteurs de contenu, des développeurs, des spécialistes des données et des réseaux, des analystes de recherche et des chercheurs sur les utilisateurs.</p>
 
-<p>Pour citer notre expert en recherche : « La recherche est difficile, mais une bonne recherche est encore plus difficile. »</p>
+<p>Pour citer notre expert en recherche : <blockquote>« La recherche est difficile, mais une bonne recherche est encore plus difficile. »</blockquote></p>
 
 <div class="clearfix"></div>
 <h2>Demander les résultats de recherche</h2>
