--- a/draft-research/recalls-safety-alerts-research-summary.html
+++ b/draft-research/recalls-safety-alerts-research-summary.html
@@ -195,7 +195,7 @@ main p, main li, main blockquote {
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "November 1st, 2019",
+		dateModified: "August 7th, 2020",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
