--- a/draft-research/rappels-securite-resume-recherche.html
+++ b/draft-research/rappels-securite-resume-recherche.html
@@ -192,7 +192,7 @@ h2 {
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "le 7 août 2020",
+		dateModified: "Date de modification : 2020-08-07",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
