--- a/draft-research/rappels-securite-resume-recherche.html
+++ b/draft-research/rappels-securite-resume-recherche.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Résumé de recherche : Conseils aux voyageurs et avertissements - Canada.ca</title>
+		<title>Résumé de recherche : Optimisation de la recherche de rappels et d’avis de sécurité (deuxième série) - Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
