--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -103,7 +103,7 @@ main p, main li, main blockquote {
 <p>The prototyped search experience used a single search box on its opening page. </p>
 	
 	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: CanadaBuys
-There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG"/>
+There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG" "width="700"/>
 	
 	<p>It then presented a simplified set of facet options for narrowing results.</p>
 	
