--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -105,7 +105,7 @@ h2 {
 <p>L’expérience de recherche prototypique utilisait une seule boîte de recherche sur la page d’accueil.</p>
 
 	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: CanadaBuys
-There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG"/>
+There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG" width="700"/>
 	
 <p>Elle présentait ensuite un ensemble simplifié  d’options à facettes pour réduire les résultats.</p>
 	
