--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -145,7 +145,7 @@ There is a search field entitled "Search active Government of Canada opportuniti
 <h2>Mesure des taux de réussite du nouveau prototype AchatsCanada</h2>
 	
 	<p>Ce graphique présente une comparaison des taux de réussite des tâches entre les tests de référence et les tests de validation pour l’ensemble des 37 participants.</p>
-	<img class="img-responsive hidden-sm hidden-xs" alt="Comparing task completion success rates in baseline and validation testing." src="../images/EPS-Graph.PNG"/>
+	<img class="img-responsive hidden-sm hidden-xs" alt="Comparing task completion success rates in baseline and validation testing." src="../images/EPS-Graph-2.png"/>
 
 <h2>Principaux facteurs de réussite</h2>
 
