--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -106,6 +106,18 @@ h2 {
 
 	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: CanadaBuys
 There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG" width="700"/>
+
+<br>
+<figure>
+<img class="img-responsive border" alt="Une longue description peut être trouvée après l'image."
+src="../images/CanadaBuys.PNG" width="700">
+</figure>
+<details>
+<summary>Le prototype d’AchatsCanada</summary>
+<p>Texte d'en-tête : CanadaBuys
+Il y a un champ de recherche intitulé "Rechercher les opportunités actives du gouvernement du Canada". Sous le champ de recherche se trouve un lien vers "Modifications apportées aux marchés publics - ce que les fournisseurs actuels doivent savoir".</p>
+</details>
+<br>
 	
 <p>Elle présentait ensuite un ensemble simplifié  d’options à facettes pour réduire les résultats.</p>
 	
