--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -104,24 +104,29 @@ h2 {
 <h4>Interface de recherche rationalisée et affichage de l’appel d’offres</h4>
 <p>L’expérience de recherche prototypique utilisait une seule boîte de recherche sur la page d’accueil.</p>
 
-	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: CanadaBuys
-There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG" width="700"/>
-
 <br>
 <figure>
 <img class="img-responsive border" alt="Une longue description peut être trouvée après l'image."
 src="../images/CanadaBuys.PNG" width="700">
 </figure>
 <details>
-<summary>Le prototype d’AchatsCanada</summary>
-<p>Texte d'en-tête : CanadaBuys
-Il y a un champ de recherche intitulé "Rechercher les opportunités actives du gouvernement du Canada". Sous le champ de recherche se trouve un lien vers "Modifications apportées aux marchés publics - ce que les fournisseurs actuels doivent savoir".</p>
+<summary>Le prototype d’AchatsCanada (en anglais seulement).</summary>
+<p>Texte d'en-tête : CanadaBuys. Il y a un champ de recherche intitulé "Rechercher les opportunités actives du gouvernement du Canada". Sous le champ de recherche se trouve un lien vers "Modifications apportées aux marchés publics - ce que les fournisseurs actuels doivent savoir".</p>
 </details>
 <br>
 	
 <p>Elle présentait ensuite un ensemble simplifié  d’options à facettes pour réduire les résultats.</p>
-	
-	<img class="img-responsive hidden-sm hidden-xs" alt="Facets listed in this order: Category and code, Location, Type of notice, Who can bid, Buyer" src="../images/Category.PNG"/>
+
+<br>
+<figure>
+<img class="img-responsive border" alt="Une longue description peut être trouvée après l'image."
+src="../images/Category.PNG" width="700">
+</figure>
+<details>
+<summary>Un example de les facettes (en anglais seulement).</summary>
+<p>Les facettes sont énumérées dans cet ordre : Catégorie et code, Lieu, Type d'avis, Qui peut soumissionner, Acheteur.</p>
+</details>
+<br>
 	
 	<p>Les options étaient centrées sur les considérations pouvant aider les fournisseurs à éliminer rapidement les options non pertinentes.</p>
 <ul>
@@ -146,13 +151,33 @@ Il y a un champ de recherche intitulé "Rechercher les opportunités actives du 
 	
 	<h4>Hiérarchie navigable pour les codes de produits et de services</h4>
 <p>Le prototype utilisait une simple recherche par mot clé pour aider les entreprises à trouver le code UNSPSC ou NIBS pour un produit ou un service en particulier. Les résultats affichaient la hiérarchie complète du contexte et permettaient aux utilisateurs de naviguer dans l’arborescence.</p>
-	
-	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: Internet or intranet client application development services. Below the UNSPSC code for this type of service is listed in bold text: 81111509. In a coloured box, the hierarchy for the code is shown: Category codes (UNSPSC), Services (Segments 70-94), Technology, research and engineering - 81000000, Computer services - 81110000, Software or hardware engineering - 81115000, ending in Internet or intranet client application development services - 81111509." src="../images/internet-hierarchy.PNG"/>
+
+<br>
+<figure>
+<img class="img-responsive border" alt="Une longue description peut être trouvée après l'image."
+src="../images/internet-hierarchy.PNG" width="700">
+</figure>
+<details>
+<summary>Services de développement d'applications client sur Internet ou intranet (en anglais seulement).</summary>
+<p>Le texte de l'en-tête se lit : Services de développement d'applications client sur Internet ou intranet. Le code UNSPSC pour ce type de service est indiqué en gras sous le titre : 81111509. La hiérarchie du code est indiquée dans un encadré de couleur : Codes de catégorie (UNSPSC), Services (segments 70-94), Technologie, recherche et ingénierie - 81000000, Services informatiques - 81110000, Ingénierie logicielle ou matérielle - 81115000, se terminant par Services de développement d'applications clients Internet ou intranet - 81111509.</p>
+</details>
+<br>
 	
 <h4>Un assistant aidant les fournisseurs à identifier leur meilleure « méthode d’approvisionnement »</h4>
 <p>Savoir s’il existe un arrangement en matière d’approvisionnement permettant à votre entreprise de se préqualifier pour les occasions gouvernementales est l’un des aspects les plus complexes de l’apprentissage du fonctionnement de l’approvisionnement. L’assistant prototypé a simplifié cette tâche. Il posait des questions simples et présentait les meilleurs choix pour votre produit ou votre service.</p>
 	
 	<img class="img-responsive hidden-sm hidden-xs" alt="The heading text for the wizard reads: Find the best way to compete for government contracts. It explains: We may have a preferred or mandatory method of supply for procuring specific types of goods or services. This is followed by a simple question: What do you sell or provide? The listed options are: Raw materials, Industrial equipment, components and supplies, end-use products, and services. Below is a button labelled Continue." src="../images/Find-the-way.PNG"/>
+
+<br>
+<figure>
+<img class="img-responsive border" alt="Une longue description peut être trouvée après l'image."
+src="../images/Find-the-way.PNG" width="700">
+</figure>
+<details>
+<summary> Identifier leur meilleure « méthode d’approvisionnement » (en anglais seulement).</summary>
+<p>Le texte de l’en-tête de l’assistant se lit comme suit : Trouvez la meilleure façon de concurrencer pour les marchés publics. Il explique : Nous avons peut-être une méthode d’approvisionnement privilégiée ou obligatoire pour l’achat de certains biens ou services. Cette explication est suivie d’une question simple : Qu’est-ce que vous vendez ou fournissez? Les options sont les suivantes : Matières premières, équipement industriel, composants et fournitures, produits d’utilisation finale et services. Vous trouverez ci-dessous un bouton intitulé « Continuer ».</p>
+</details>
+<br>
 
 <h2>Mesure des taux de réussite du nouveau prototype AchatsCanada</h2>
 	
