--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -104,6 +104,17 @@ main p, main li, main blockquote {
 	
 	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: CanadaBuys
 There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG" "width="700"/>
+
+<br>
+<figure>
+<img class="img-responsive border" alt="A long description can be found after the image."
+src="/images/CanadaBuys.PNG" width="700">
+</figure>
+<details>
+<summary>The CanadaBuys prototype.</summary>
+<p>Heading text reads: CanadaBuys. There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know".</p>
+</details>
+<br>
 	
 	<p>It then presented a simplified set of facet options for narrowing results.</p>
 	
