--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -102,9 +102,6 @@ main p, main li, main blockquote {
 	<h4> Streamlined search interface and tender display </h4>
 <p>The prototyped search experience used a single search box on its opening page. </p>
 	
-	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: CanadaBuys
-There is a search field entitled "Search active Government of Canada opportunities". Below the search field is a link to "Changes to procurement - what current suplliers need to know"." src="../images/CanadaBuys.PNG" "width="700"/>
-
 <br>
 <figure>
 <img class="img-responsive border" alt="A long description can be found after the image."
@@ -118,7 +115,16 @@ src="/images/CanadaBuys.PNG" width="700">
 	
 	<p>It then presented a simplified set of facet options for narrowing results.</p>
 	
-	<img class="img-responsive hidden-sm hidden-xs" alt="Facets listed in this order: Category and code, Location, Type of notice, Who can bid, Buyer" src="../images/Category.PNG"/>
+<br>
+<figure>
+<img class="img-responsive border" alt="A long description can be found after the image."
+src="/images/Category.PNG" width="700">
+</figure>
+<details>
+<summary>An example of the facets. </summary>
+<p>Facets listed in this order: Category and code, Location, Type of notice, Who can bid, Buyer.</p>
+</details>
+<br>
 	
 	<p>The options focused on considerations that would help suppliers to quickly eliminate irrelevant options.</p>
 	
@@ -144,12 +150,30 @@ src="/images/CanadaBuys.PNG" width="700">
 	<h4>Navigable hierarchy for product and service codes</h4>
 <p>The prototype used a simple keyword search to help businesses identify the UNSPSC or GSIN code for a specific product or service. Results showed the full hierarchy for context, and let users navigate through the tree.</p>
 	
-	<img class="img-responsive hidden-sm hidden-xs" alt="Heading text reads: Internet or intranet client application development services. Below the UNSPSC code for this type of service is listed in bold text: 81111509. In a coloured box, the hierarchy for the code is shown: Category codes (UNSPSC), Services (Segments 70-94), Technology, research and engineering - 81000000, Computer services - 81110000, Software or hardware engineering - 81115000, ending in Internet or intranet client application development services - 81111509." src="../images/internet-hierarchy.PNG"/>
+<br>
+<figure>
+<img class="img-responsive border" alt="A long description can be found after the image."
+src="/images/internet-hierarchy.PNG" width="700">
+</figure>
+<details>
+<summary>Internet or intranet client application development services.</summary>
+<p>Heading text reads: Internet or intranet client application development services. Below the UNSPSC code for this type of service is listed in bold text: 81111509. In a coloured box, the hierarchy for the code is shown: Category codes (UNSPSC), Services (Segments 70-94), Technology, research and engineering - 81000000, Computer services - 81110000, Software or hardware engineering - 81115000, ending in Internet or intranet client application development services - 81111509.</p>
+</details>
+<br>
 	
 	<h4>A wizard to help suppliers identify their best “method of supply”</h4>
 <p>Knowing whether there is a supply arrangement that will allow your company to pre-qualify for government opportunities is one of the more complex aspects of learning how procurement works. The prototyped wizard made this easy. It asked simple questions and presented the best options for your good or service.</p>
 	
-<img class="img-responsive hidden-sm hidden-xs" alt="The heading text for the wizard reads: Find the best way to compete for government contracts. It explains: We may have a preferred or mandatory method of supply for procuring specific types of goods or services. This is followed by a simple question: What do you sell or provide? The listed options are: Raw materials, Industrial equipment, components and supplies, end-use products, and services. Below is a button labelled Continue." src="../images/Find-the-way.PNG"/>
+<br>
+<figure>
+<img class="img-responsive border" alt="A long description can be found after the image."
+src="/images/Find-the-way.PNG" width="700">
+</figure>
+<details>
+<summary>Identifying their best "method of supply".</summary>
+<p>The heading text for the wizard reads: Find the best way to compete for government contracts. It explains: We may have a preferred or mandatory method of supply for procuring specific types of goods or services. This is followed by a simple question: What do you sell or provide? The listed options are: Raw materials, Industrial equipment, components and supplies, end-use products, and services. Below is a button labelled Continue.</p>
+</details>
+<br>
 
 <h2>Measuring success rates on the CanadaBuys prototype</h2>
 
