--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -182,6 +182,56 @@ src="../images/Find-the-way.PNG" width="700">
 	<p>Ce graphique présente une comparaison des taux de réussite des tâches entre les tests de référence et les tests de validation pour l’ensemble des 37 participants.</p>
 	<img class="img-responsive hidden-sm hidden-xs" alt="Comparing task completion success rates in baseline and validation testing." src="../images/EPS-Graph-2.png"/>
 
+<div class="row col-md-9">
+<details>
+		 <summary>
+			 Taux de réussite des tâches – tableau
+		 </summary>
+			 <div class="table-bravo">
+						 <table class="table table-bordered">
+
+			<thead><tr><th scope="col">Task</th>
+			<th scope="col">Baseline</th>
+			<th scope="col">Validation</th>
+
+		</tr></thead><tbody><tr><td>Appel d'offres (aménagement paysager)</td>
+			<td>11 %</td>
+			<td>58 %</td>
+		</tr><tr><td>Joignez-vous à la Liste des fournisseurs intéressés</td>
+			<td>39 %</td>
+			<td>79 %</td>
+		</tr><tr><td>Énoncé des travaux</td>
+			<td>6 %</td>
+			<td>79 %</td>
+		</tr><tr><td>Appel d'offres (correction d'épreuves)</td>
+			<td>41 %</td>
+			<td>89 %</td>
+			<tr><td>Travail à distance</td>
+				<td>0 %</td>
+				<td>95 %</td>
+			</tr>
+		</tr><tr><td>Dates + offre permanente</td>
+			<td>11 %</td>
+			<td>53 %</td>
+		</tr>
+		<tr><td>Recherche dans le NIBS</td>
+			<td>29 %</td>
+			<td>47 %</td>
+		</tr>
+		<tr><td>Arrangement en matière d'approvisionnement</td>
+			<td>22 %</td>
+			<td>47 %</td>
+		</tr>
+
+		</tbody>
+	</table>
+</div>
+
+
+</details>
+
+</div>
+
 <h2>Principaux facteurs de réussite</h2>
 
 <p>Voici les caractéristiques du prototype qui ont eu la plus grande incidence sur les taux de réussite :</p>
