--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -190,9 +190,9 @@ src="../images/Find-the-way.PNG" width="700">
 			 <div class="table-bravo">
 						 <table class="table table-bordered">
 
-			<thead><tr><th scope="col">Task</th>
-			<th scope="col">Baseline</th>
-			<th scope="col">Validation</th>
+			<thead><tr><th scope="col">Tâche</th>
+			<th scope="col">Succès</th>
+			<th scope="col">Trouvabilité</th>
 
 		</tr></thead><tbody><tr><td>Appel d'offres (aménagement paysager)</td>
 			<td>11 %</td>
@@ -231,6 +231,8 @@ src="../images/Find-the-way.PNG" width="700">
 </details>
 
 </div>
+
+<br>
 
 <h2>Principaux facteurs de réussite</h2>
 
