--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Résumé de recherche : Conseils aux voyageurs et avertissements - Canada.ca</title>
+		<title>Résumé de recherche : Portail de solution d’achats électroniques (SAE) - Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
@@ -29,7 +29,7 @@
 			defTop.outerHTML = wet.builder.top({
 				lngLinks: [{
 					lang: "fr",
-					href: "https://blog.canada.ca/research-summaries/travel-advice-research-summary.html",
+					href: "https://blog.canada.ca/research-summaries/electronic-procurement-research-summary.html",
 					text: "English"
 				}],
 				breadcrumbs: [{
