--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -266,7 +266,7 @@ src="../images/Find-the-way.PNG" width="700">
 <script type="text/javascript">
 	var defPreFooter = document.getElementById("def-preFooter");
 	defPreFooter.outerHTML = wet.builder.preFooter({
-		dateModified: "le 6 août 2020",
+		dateModified: "le 20 novembre 2020",
 		showPostContent: true,
 		showFeedback: true,
 		showShare: true
