--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -159,7 +159,14 @@ src="../images/internet-hierarchy.PNG" width="700">
 </figure>
 <details>
 <summary>Services de développement d'applications client sur Internet ou intranet (en anglais seulement).</summary>
-<p>Le texte de l'en-tête se lit : Services de développement d'applications client sur Internet ou intranet. Le code UNSPSC pour ce type de service est indiqué en gras sous le titre : 81111509. La hiérarchie du code est indiquée dans un encadré de couleur : Codes de catégorie (UNSPSC), Services (segments 70-94), Technologie, recherche et ingénierie - 81000000, Services informatiques - 81110000, Ingénierie logicielle ou matérielle - 81115000, se terminant par Services de développement d'applications clients Internet ou intranet - 81111509.</p>
+	<p>La hiérarchie du code est indiquée dans un encadré de couleur : </p>
+<ul>
+	<li>Codes de catégorie (UNSPSC)</li>
+	<li>Services (segments 70-94)</li>
+	<li>Technologie, recherche et ingénierie – 81000000</li>
+	<li>Services informatiques – 81110000</li>
+	<li>Ingénierie logicielle ou matérielle – 81115000</li>
+	<li>Services de développement d'applications clients Internet ou intranet - 81111509</li></ul>>
 </details>
 <br>
 	
