--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -120,7 +120,7 @@ src="../images/CanadaBuys.PNG" width="700">
 <br>
 <figure>
 <img class="img-responsive border" alt="Une longue description peut être trouvée après l'image."
-src="../images/Category.PNG">
+src="../images/Category.PNG" width="500">
 </figure>
 <details>
 <summary>Un example de les facettes (en anglais seulement).</summary>
