--- a/draft-research/electronic-procurement-research-summary.html
+++ b/draft-research/electronic-procurement-research-summary.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-		<title>Research Summary: Electronic Procurement Solution (EPS) portal</title>
+		<title>Research Summary: Electronic Procurement Solution (EPS) portal - Canada.ca</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<!-- Meta data -->
 		<!-- Meta data-->
@@ -118,7 +118,7 @@ src="/images/CanadaBuys.PNG" width="700">
 <br>
 <figure>
 <img class="img-responsive border" alt="A long description can be found after the image."
-src="/images/Category.PNG" width="700">
+src="/images/Category.PNG" width="500">
 </figure>
 <details>
 <summary>An example of the facets </summary>
@@ -157,7 +157,17 @@ src="/images/internet-hierarchy.PNG" width="700">
 </figure>
 <details>
 <summary>Internet or intranet client application development services</summary>
-<p>Heading text reads: Internet or intranet client application development services. Below the UNSPSC code for this type of service is listed in bold text: 81111509. In a coloured box, the hierarchy for the code is shown: Category codes (UNSPSC), Services (Segments 70-94), Technology, research and engineering - 81000000, Computer services - 81110000, Software or hardware engineering - 81115000, ending in Internet or intranet client application development services - 81111509.</p>
+<p>Heading text reads: Internet or intranet client application development services. Below the UNSPSC code for this type of service is listed in bold text: 81111509. </p>
+
+	<p>In a coloured box, the hierarchy for the code is shown: </p>
+	<ul>
+		<li>Category codes (UNSPSC)</li>
+		<li>Services (Segments 70-94)</li>
+		<li>Technology, research and engineering – 81000000</li>
+		<li>Computer services – 81110000</li>
+		<li>Software or hardware engineering – 81115000</li>
+		<li>Internet or intranet client application development services - 81111509</li>
+		</ul>
 </details>
 <br>
 	
