--- a/draft-research/achats-electroniques-resume-recherche.html
+++ b/draft-research/achats-electroniques-resume-recherche.html
@@ -111,11 +111,11 @@ src="../images/CanadaBuys.PNG" width="700">
 </figure>
 <details>
 <summary>Le prototype d’AchatsCanada (en anglais seulement).</summary>
-<p>Texte d'en-tête : CanadaBuys. Il y a un champ de recherche intitulé "Rechercher les opportunités actives du gouvernement du Canada". Sous le champ de recherche se trouve un lien vers "Modifications apportées aux marchés publics - ce que les fournisseurs actuels doivent savoir".</p>
+<p>Texte d'en-tête : CanadaBuys. Il y a un champ de recherche intitulé «&nbsp;Rechercher les opportunités actives du gouvernement du Canada&nbsp;». Sous le champ de recherche se trouve un lien vers «&nbsp;Modifications apportées aux marchés publics - ce que les fournisseurs actuels doivent savoir&nbsp;».</p>
 </details>
 <br>
 	
-<p>Elle présentait ensuite un ensemble simplifié  d’options à facettes pour réduire les résultats.</p>
+<p>Elle présentait ensuite un ensemble simplifié d’options à facettes pour réduire les résultats.</p>
 
 <br>
 <figure>
@@ -139,7 +139,7 @@ src="../images/Category.PNG" width="500">
 	
 	<h4>Affichage lisible du résumé de l’opportunité</h4>
 	
-	<p>Dans le prototype, les soumissions étaient formatées de façon à fournir l’information essentielle dans un format unique et facile à lire. Le modèle « sur cette page » a été utilisé pour faciliter la navigation. Encore une fois, le plus important était de faciliter la manière dont les fournisseurs pouvaient déterminer :</p>
+	<p>Dans le prototype, les soumissions étaient formatées de façon à fournir l’information essentielle dans un format unique et facile à lire. Le modèle «&nbsp;sur cette page&nbsp;» a été utilisé pour faciliter la navigation. Encore une fois, le plus important était de faciliter la manière dont les fournisseurs pouvaient déterminer :</p>
 	<ul>
 		<li>les produits recherchés par les acheteurs</li>
 		<li>les critères d’évaluation</li>
@@ -181,14 +181,14 @@ src="../images/Find-the-way.PNG" width="700">
 </figure>
 <details>
 <summary> Identifier leur meilleure « méthode d’approvisionnement » (en anglais seulement).</summary>
-<p>Le texte de l’en-tête de l’assistant se lit comme suit : Trouvez la meilleure façon de concurrencer pour les marchés publics. Il explique : Nous avons peut-être une méthode d’approvisionnement privilégiée ou obligatoire pour l’achat de certains biens ou services. Cette explication est suivie d’une question simple : Qu’est-ce que vous vendez ou fournissez? Les options sont les suivantes : Matières premières, équipement industriel, composants et fournitures, produits d’utilisation finale et services. Vous trouverez ci-dessous un bouton intitulé « Continuer ».</p>
+<p>Le texte de l’en-tête de l’assistant se lit comme suit : Trouvez la meilleure façon de concurrencer pour les marchés publics. Il explique : Nous avons peut-être une méthode d’approvisionnement privilégiée ou obligatoire pour l’achat de certains biens ou services. Cette explication est suivie d’une question simple : Qu’est-ce que vous vendez ou fournissez? Les options sont les suivantes : Matières premières, équipement industriel, composants et fournitures, produits d’utilisation finale et services. Vous trouverez ci-dessous un bouton intitulé «&nbsp;Continuer&nbsp;».</p>
 </details>
 <br>
 
 <h2>Mesure des taux de réussite du nouveau prototype AchatsCanada</h2>
 	
 	<p>Ce graphique présente une comparaison des taux de réussite des tâches entre les tests de référence et les tests de validation pour l’ensemble des 37 participants.</p>
-	<img class="img-responsive hidden-sm hidden-xs" alt="Comparing task completion success rates in baseline and validation testing." src="../images/EPS-Graph-2.png"/>
+	<img class="img-responsive hidden-sm hidden-xs" alt="Une longue description peut être trouvée après l'image." src="../images/EPS-Graph-2.png"/>
 
 <div class="row col-md-9">
 <details>
