chores: Update index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://blog.canada.ca/">
+<!--<meta http-equiv="refresh" content="0; url=https://blog.canada.ca/">-->
 <link rel="canonical" href="https://blog.canada.ca/" />
 <title>Canada.ca blog - Canada.ca</title>
 </head>
 <body>
+  <ul>
+    <li><a href="blog-home-test-index.html">Blog</a></li>
+    <li><a href="">Blogue</a></li>
+  </ul>
 </body>
 </html>
