--- a/accueil.html
+++ b/accueil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://blogue.canada.ca/">
+<!-- <meta http-equiv="refresh" content="0; url=https://blogue.canada.ca/"> -->
 <link rel="canonical" href="https://blogue.canada.ca/" />
 <title>Blogue de Canada.ca - Canada.ca</title>
 </head>
