--- a/index.html
+++ b/index.html
@@ -1,14 +1,93 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-<!--<meta http-equiv="refresh" content="0; url=https://blog.canada.ca/">-->
-<link rel="canonical" href="https://blog.canada.ca/" />
-<title>Canada.ca blog - Canada.ca</title>
-</head>
-<body>
-  <ul>
-    <li><a href="blog-home-test-index.html">Blog</a></li>
-    <li><a href="">Blogue</a></li>
-  </ul>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="utf-8"/>
+		<title>Blog|blogue - Canada.ca</title>
+		<link rel="schema.dcterms" href="http://purl.org/dc/terms/" />
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
+		<meta name="description" content="" />
+		<meta name="dcterms.description" content="" />
+		<meta name="dcterms.creator" content="" />
+		<meta name="dcterms.title" content="GCWeb - Canada.ca" />
+		<meta name="dcterms.issued" title="W3CDTF" content="" />
+		<meta name="dcterms.modified" title="W3CDTF" content="" />
+		<meta name="dcterms.subject" content="" />
+		<meta name="dcterms.language" title="ISO639-2" content="eng" />
+		<meta name="robots" content="noindex, follow" />
+
+		<meta property="dcterms:issued" content="">
+		<meta property="dcterms:modified" content="">
+		<meta property="dcterms:title" lang="en" content="Blog|blogue - Canada.ca" />
+		<meta property="dcterms:creator" lang="en" content="">
+		<meta property="dcterms:subject" lang="en" title="gccore" content="" />
+		<meta property="dcterms:description" lang="en" content="" />
+		<meta property="dcterms:title" lang="fr" content="Blog|blogue - Canada.ca" />
+		<meta property="dcterms:creator" lang="fr" content="">
+		<meta property="dcterms:subject" lang="fr" title="gccore" content="" />
+		<meta property="dcterms:description" lang="fr" content="" />
+		<link href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css" />
+    <noscript><link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/css/noscript.min.css" /></noscript>
+    <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/messages.min.css" />
+	</head>
+
+	<body class="splash" vocab="http://schema.org/" resource="#wb-webpage" typeof="WebPage">
+		<div id="bg" data-wb-randomize='{ "shuffle": true, "selector": "img", "toggle": "hide" }'>
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-1.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-2.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-3.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-4.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-5.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-6.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-7.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-8.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-9.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-10.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-11.jpg" alt="" />
+			<img class="hide" src="https://www.canada.ca/content/dam/canada/splash/sp-bg-12.jpg" alt="" />
+		</div>
+		<main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
+			<div class="sp-hb">
+				<div class="sp-bx col-xs-12">
+					<h1 property="name" class="wb-inv">Blog|blogue - Canada.ca</h1>
+					<div class="row">
+						<div class="col-xs-11 col-md-8" property="publisher" resource="#wb-publisher" typeof="GovernmentOrganization">
+							<img src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/sig-spl.svg" width="283" alt="Government of Canada" property="logo" /><span class="wb-inv"> / <span lang="fr">Gouvernement du Canada</span></span>
+							<meta property="name" content="Government of Canada" />
+							<meta property="name" lang="fr" content="Gouvernement du Canada"/>
+							<meta property="areaServed" typeof="Country" content="Canada" />
+						</div>
+					</div>
+					<div class="row">
+						<div class="row">
+	<section class="col-xs-6 text-right">
+		<h2 class="wb-inv">Canada.ca blog</h2>
+		<p><a href="https://blog.canada.ca" class="btn btn-primary">English</a></p>
+	</section>
+	<section class="col-xs-6" lang="fr">
+		<h2 class="wb-inv">Le blogue de Canada.ca</h2>
+		<p><a href="https://blogue.canada.ca" class="btn btn-primary">Français</a></p>
+	</section>
+</div>
+
+					</div>
+				</div>
+				<div class="sp-bx-bt col-xs-12">
+					<div class="row">
+						<div class="col-xs-7 col-md-8">
+							<a href="https://www.canada.ca/en/transparency/terms.html" class="sp-lk">Terms and conditions</a> <span class="glyphicon glyphicon-asterisk"></span> <a href="https://www.canada.ca/fr/transparence/avis.html" class="sp-lk" lang="fr">Avis</a>
+						</div>
+						<div class="col-xs-5 col-md-4 text-right mrgn-bttm-md">
+							<img src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/wmms-spl.svg" width="127" alt="Symbol of the Government of Canada" /><span class="wb-inv"> / <span lang="fr">Symbole du gouvernement du Canada</span></span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
+		
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha384-rY/jv8mMhqDabXSo+UCggqKtdmBfd3qC2/KvyTDNQ6PcUJXaxK1tMepoQda4g5vB" crossorigin="anonymous"></script>
+<script src="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/js/wet-boew.min.js"></script>
+<script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/js/theme.min.js"></script>
+	</body>
 </html>
